[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/entity/Cargo.gd" type="Script" id=1]
[ext_resource path="res://shaders/cargo.tres" type="Shader" id=2]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/launch = false

[node name="Cargo" type="RigidBody2D"]
z_index = -1
collision_layer = 64
collision_mask = 128
input_pickable = true
mass = 10.0
gravity_scale = 0.0
linear_damp = 10.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LeftEmitter" type="CPUParticles2D" parent="."]
position = Vector2( -2, 9 )
emitting = false
amount = 4
lifetime = 0.2
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.4
direction = Vector2( -1, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.25
scale_amount = 4.0
color = Color( 0.741176, 0.643137, 0.6, 0.784314 )

[node name="RightEmitter" type="CPUParticles2D" parent="."]
position = Vector2( 2, 9 )
emitting = false
amount = 4
lifetime = 0.2
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.4
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.25
scale_amount = 4.0
color = Color( 0.741176, 0.643137, 0.6, 0.784314 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="mouse_entered" from="." to="." method="_on_Box_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Box_mouse_exited"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]
